<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventWriteDown</string>
    <string name="eventName">Enter the event name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">0 men / 0 women</string>
    <string name="action_settings">Settings</string>

</resources>
