<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/single_line_list_height"
            android:layout_marginBottom="@dimen/spacing_between_elements"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/name_field"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/eventName"
                android:inputType="text" />

            <ImageButton
                android:layout_width="@dimen/button_icon_metrics"
                android:layout_height="@dimen/button_icon_metrics"
                android:layout_marginLeft="@dimen/spacing_between_elements"
                android:src="@drawable/ic_delete"
                android:onClick="deleteName"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/single_line_list_height"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:textColor="@color/textColorPrimary"
            android:text="@string/gender" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/male_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:checked="true"
                android:textColor="@color/textColorSecondary"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female_radiobutton"
                android:layout_width="wrap_content"
                android:paddingLeft="24dp"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorSecondary"
                android:text="@string/female" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/single_line_list_height"
            android:layout_marginTop="@dimen/spacing_between_elements"
            android:layout_marginBottom="@dimen/spacing_between_elements"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textAllCaps="true"
                android:textColor="@color/textColorPrimary"
                android:text="@string/quantity" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/spacing_between_elements"
                android:textSize="@dimen/titleTextSize"
                android:textColor="@color/textColorSecondary"
                android:gravity="center_vertical"
                android:text="@string/initial_quantity_value" />

            <ImageButton
                android:layout_width="@dimen/button_icon_metrics"
                android:layout_height="@dimen/button_icon_metrics"
                android:layout_marginLeft="@dimen/spacing_between_elements"
                android:src="@drawable/ic_delete"
                android:onClick="deleteQuantity"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/single_line_list_height"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/button_icon_metrics"
                android:layout_height="@dimen/button_icon_metrics"
                android:onClick="decrementValues"
                style="@style/RaisedButtonStyle"
                android:text="-" />

            <Button
                android:layout_width="@dimen/button_icon_metrics"
                android:layout_height="@dimen/button_icon_metrics"
                android:layout_marginLeft="@dimen/spacing_between_elements"
                android:onClick="addValues"
                style="@style/RaisedButtonStyle"
                android:text="+" />

            <ImageButton
                android:layout_width="@dimen/button_icon_metrics"
                android:layout_height="@dimen/button_icon_metrics"
                android:layout_marginLeft="@dimen/spacing_between_elements"
                android:onClick="submitValues"
                android:src="@drawable/ic_submit" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
